cabal-version: 2.2
name: hls-getlinkable-issue
version: 0.1
build-type: Simple

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
    Clash.Promoted.Nat
    Clash.Promoted.Nat.Literals
    Clash.Promoted.Nat.TH
    Clash.XException
    Clash.XException.Internal

  build-depends:
    base,
    template-haskell,
